# c-GameServer

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  build.bat  build.sh
config/: config.ini
include/: GameServer.h  INIReader.h
src/: GameServer.cpp
src/config/: ConfigManager.cpp  ConfigManager.h
src/database/: AccountDB.cpp  AccountDB.h  AccountRepository.h  CCURepository.h  DatabaseManager.cpp  DatabaseManager.h  DatabaseRepository.h  MySQLConnection.cpp  MySQLConnection.h  MySQLPool.cpp  MySQLPool.h
src/handler/: MainLoopHandler.cpp  MainLoopHandler.h  message_handler.cpp  message_handler.h
src/logging/: Log.cpp  Log.h
src/main/: MainLoop.cpp  MainLoop.h
src/messaging/: message.cpp  message.h  message_header.h  result.h
src/network/: AsyncIO.cpp  AsyncIO.h  AsyncIOManager.cpp  INetworkEventListener.h  LinuxEpoll.cpp  LinuxEpoll.h  NetworkEventDispatcher.h  NetworkServer.cpp  NetworkServer.h  NetworkServer_fwd.h  SocketTypes.h  WindowsIOCP.cpp  WindowsIOCP.h
tests/: ClientTest.cpp  MySQLTest.cpp
